# ImageMagick

./: .gitignore  CMakeLists.txt  ConfigureChecks.cmake  ConfigurePrefix.cmake
MagickCore/: CMakeLists.txt  image-view.c  method-attribute.h  nt-base.h  static.h  version.h.in
coders/: analyze.c  analyze.h  coders-list.h  coders.h
config/: config.h.cmake
